--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-    "name": "sdc",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@material-ui/core": "^4.9.4",
-        "@material-ui/icons": "^4.9.1",
-        "@testing-library/react-hooks": "^3.2.1",
-        "@types/enzyme": "^3.10.3",
-        "@types/jest": "24.0.18",
-        "@types/node": "12.7.5",
-        "@types/react": "16.9.2",
-        "@types/react-dom": "16.9.0",
-        "@types/react-router-dom": "^5.1.3",
-        "axios": "^0.19.0",
-        "axios-mock-adapter": "^1.17.0",
-        "node-sass": "^4.13.1",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.0",
-        "styled-components": "^5.0.1",
-        "typescript": "3.6.3"
-    },
-    "scripts": {
-        "start": "./node_modules/.bin/react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "lint": "eslint \"src\" --ext .ts --ext .tsx --ext .js --max-warnings 0",
-        "format": "prettier --check \"src/**\""
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.14.0",
-        "eslint": "^6.6.0",
-        "eslint-plugin-prettier": "^3.1.1",
-        "jest-enzyme": "^7.1.1",
-        "prettier": "^1.19.1",
-        "react-test-renderer": "^16.9.0"
-    }
+  "name": "sdc",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
+    "styled-components": "^5.0.1",
+    "typescript": "3.6.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src\" --ext .ts --ext .tsx --ext .js --max-warnings 0",
+    "format": "prettier --check \"src/**\""
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "jest-enzyme": "^7.1.1",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "^16.9.0"
+  }
 }
